--- a/gallery.html
+++ b/gallery.html
@@ -56,7 +56,7 @@
                 <div class="col-lg-10 mx-auto">
                     <div id="c-pao" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner" id="pao">
-                            <div class="carousel-item active" data-bs-interval="2000">
+                            <div class="carousel-item active">
                                 <img src="assets/foods/pao/1.jpg" alt="Imagem 1" class="d-block w-100">
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                     </div>
                     <div id="c-salgados" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner" id="salgados">
-                            <div class="carousel-item active" data-bs-interval="2000">
+                            <div class="carousel-item active">
                                 <img src="assets/foods/salgados/1.jpg" alt="Imagem 1" class="d-block w-100">
                             </div>
                         </div>
@@ -82,7 +82,7 @@
                     </div>
                     <div id="c-bolos" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner" id="bolos">
-                            <div class="carousel-item active" data-bs-interval="2000">
+                            <div class="carousel-item active" >
                                 <img src="assets/foods/bolos/1.jpg" alt="Imagem 1" class="d-block w-100">
                             </div>
                         </div>
@@ -95,7 +95,7 @@
                     </div>
                     <div id="c-biscoitos" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner" id="biscoitos">
-                            <div class="carousel-item active" data-bs-interval="2000">
+                            <div class="carousel-item active">
                                 <img src="assets/foods/biscoitos/1.jpg" alt="Imagem 1" class="d-block w-100">
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                     </div>
                     <div id="c-compotas_manteigas" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner" id="compotas_manteigas">
-                            <div class="carousel-item active" data-bs-interval="2000">
+                            <div class="carousel-item active">
                                 <img src="assets/foods/compotas_manteigas/1.jpg" alt="Imagem 1" class="d-block w-100">
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                     </div>
                     <div id="c-veggiecinios" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner" id="veggiecinios">
-                            <div class="carousel-item active" data-bs-interval="2000">
+                            <div class="carousel-item active">
                                 <img src="assets/foods/veggiecinios/1.jpg" alt="Imagem 1" class="d-block w-100">
                             </div>
                         </div>
